🎨 fix mathml overflows

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,14 @@ html {
   font-family: 'Golos Text Variable', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 code {
   font-family: 'JetBrains Mono', monospace;
+}
+
+math {
+  overflow: auto hidden;
 }
